--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>spring_01_IOC1</module>
+        <module>spring_02_HelloWorld</module>
+        <module>spring_03_ICO2</module>
     </modules>
 
     <properties>
